<resources>
    <string name="app_name">Movie List</string>
    <string name="avengers_movie_name">Avengers:\nEnd Game</string>
    <string name="age_rating">13 +</string>
    <string name="back_btn">Back</string>
    <string name="avengers_tags">Action, Adventure, Fantasy</string>
    <string name="number_reviews">125 REVIEWS</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers
        assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="cast_name_1">Robert Downey Jr.</string>
    <string name="cast_name_2">Chris  Evans</string>
    <string name="cast_name_3">Mark  Ruffalo</string>
    <string name="cast_name_4">Chris Hemsworth</string>
    <string name="back">Back</string>
    <string name="cast_img_description">cast_img</string>
    <string name="bi_description">background_img</string>
    <string name="star_description">star_img</string>


    <!-- Movies list screen -->
    <string name="movies_list_title">Movies list</string>
    <string name="movies_list_header_icon_description">Target icon</string>
    <string name="movies_list_header_image_description">Avengers poster</string>
    <string name="movies_list_favorite_description">Favorite icon</string>
    <string name="movies_list_allowed_age">13+</string>
    <string name="movies_list_film_genre">Action, Adventure, Fantasy</string>
    <string name="movies_list_rating_bar_description">Rating bar</string>
    <string name="movies_list_reviews_counter">125 Reviews</string>
    <string name="movies_list_film_name">Avengers: End Game</string>
    <string name="movies_list_film_time">137 MIN</string>
    <!-- Movies list screen -->
</resources>